# englishlearnershabi2

./: .env.example  .gitignore  4_random_350_words.csv  6_random_350_words.csv  README.md  add_sample_articles.py  check_articles.py  configure.py  english_learning.db  pyproject.toml  requirements.txt  requirementsci.txt  run_all.bat  run_launcher_fixed2.bat  run_log.txt  sat_random_350_words.csv  setup.py  start_all.sh  start_backend.py  start_server.bat  start_server.sh  一键启动.bat  一键启动_fixed - Copy111.bat  一键启动_fixed.bat  启动前端.bat  启动后端.bat
backend/: __init__.py  app.py  coach_cli.py  content_processor.py  embedding_service.py  interactive_quiz.py  models.py  models_part_vocal.py  question_generator.py  reading_test.py  recommender.py  speaking_coach.py  vocabulary_service.py  writing_coach.py
backend/data_pipeline/: __init__.py  llm_analyzer.py  pipeline.py  text_analyzer.py
backend/data_pipeline/scrapers/: __init__.py  news_scraper.py  voa_scraper.py
backend/data_pipeline/sources/: __init__.py  base.py  newsapi.py  voa.py  wikipedia.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ArticleCard.tsx  DiscoverView.tsx  EnglishPilot.tsx  README_DiscoverView.md  README_ReadingTest.md  Reader.tsx  ReadingTest.tsx  Sidebar.tsx  SpeakingCoach.tsx  SwipeDeck.tsx  VocabularyList.tsx  VocabularyPractice.tsx  WritingCoach.tsx
frontend/src/hooks/: useAuth.ts
scripts/: analyze_missing_articles.py  backfill_embeddings.py  import_articles.py  quick_import.py  run_pipeline.py  test_user_embedding.py
(+2 files in other folders)
